fix(framework): support API 32 proxy installation